--- a/_includes/screencontent.html
+++ b/_includes/screencontent.html
@@ -22,7 +22,12 @@
             <script>
                 $(function() {
                     $(".videoContainer").removeClass("hidden");
-                    var videoElement = $(".screenvideo").attr({'autoplay': true, 'muted': true, 'loop': true});
+                    var videoElement = $(".screenvideo").attr({
+                        'autoplay': true, 
+                        'muted': true, 
+                        'loop': true,
+                        'playsInline': true // Added playsInline attribute
+                    });
                     videoElement.append('<source src="{{ site.github.baseurl }}{{ file.path }}" type="video/mp4">');
                     videoElement.get(0).play().catch(function(error) {
                         console.error("Video autoplay failed:", error);
@@ -34,7 +39,12 @@
             <script>
                 $(function() {
                     $(".videoContainer").removeClass("hidden");
-                    var videoElement = $(".screenvideo").attr({'autoplay': true, 'muted': true, 'loop': true});
+                    var videoElement = $(".screenvideo").attr({
+                        'autoplay': true, 
+                        'muted': true, 
+                        'loop': true,
+                        'playsInline': true // Added playsInline attribute
+                    });
                     videoElement.append('<source src="{{ site.github.baseurl }}{{ file.path }}" type="video/ogg">');
                     videoElement.get(0).play().catch(function(error) {
                         console.error("Video autoplay failed:", error);
@@ -46,7 +56,12 @@
             <script>
                 $(function() {
                     $(".videoContainer").removeClass("hidden");
-                    var videoElement = $(".screenvideo").attr({'autoplay': true, 'muted': true, 'loop': true});
+                    var videoElement = $(".screenvideo").attr({
+                        'autoplay': true, 
+                        'muted': true, 
+                        'loop': true,
+                        'playsInline': true // Added playsInline attribute
+                    });
                     videoElement.append('<source src="{{ site.github.baseurl }}{{ file.path }}" type="video/webm">');
                     videoElement.get(0).play().catch(function(error) {
                         console.error("Video autoplay failed:", error);
