--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="yABGjXQSt76R1TAqcJnkxaV6Ck6qYfyG0jzyyk0ALYY" />
 	<base target="_blank">
 
 	<title class="pageTitle">{{ site.page_title }}</title>
